optimize_20231105_适配JDK17同时兼容8_zangzang